--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "dotenv": "^6.1.0",
     "express": "^4.16.4",
+    "oembed-all": "^1.2.0",
     "process-env": "^1.1.0",
     "socket.io": "^2.1.1",
     "twit": "^2.2.11"
